=== 3.13.1 / 2015-02-03

* 1 bug fix:

  * Remove deprecated test_files from spec. (igas)

=== 3.13.0 / 2014-09-26

* 2 minor enhancements:

  * Added ext_name to sow template expansion variables.
  * Added oedipus version to generation output

=== 3.12.0 / 2014-04-23

* 3 minor enhancements:

  * Added :rdoc plugin.
  * Renamed History.txt to History.rdoc.
  * Renamed README.txt to README.rdoc.

=== 3.11.0 / 2014-04-02

* 1 minor enhancement:

  * Added test:slow task so I don't have to remember sort's flags anymore. YAY for UNIX!

=== 3.10.0 / 2014-03-14

* 1 major enhancement:

  * Removed all references to rubyforge, including the rubyforge plugin.

* 1 minor enhancement:

  * Updated template project (minitest usage, readme format, etc)

=== 3.9.0 / 2014-02-10

* 1 minor enhancement:

  * Added irb task.

* 1 bug fix:

  * Properly constrain rubyforge dependency to avoid warnings. Prolly remove entirely soon. (halostatue)

=== 3.8.1 / 2014-01-22

* 2 minor enhancements:

  * Added C=<#cpus> for minitest parallel testing support.
  * Added test_cmd task to make running tests in subcommands (eg profiling) easy.

* 1 bug fix:

  * Fixed bug when mixing TESTOPTS & N.

=== 3.8.0 / 2014-01-15

* 2 minor enhancements:

  * Change racc plugin to support oedipus_lex, not rexical.
  * Switched .rb to .rex rule to oedipus_lex.

=== 3.7.4 / 2014-01-06

* 1 bug fix:

  * Fix path in template/Rakefile.erb since we now have template styles. (mikestok)

=== 3.7.3 / 2013-12-13

* 1 bug fix:

  * Quell warnings in sow on ruby 2.0. (teoljungberg)

=== 3.7.2 / 2013-12-05

* 1 bug fix:

  * Apparently getting files in a different order on osx on ruby 2.1. (sanemat)

=== 3.7.1 / 2013-08-19

* 1 minor enhancement:

  * Added N=testname option to the test task to shortcut TESTOPTS='-n testname'

=== 3.7.0 / 2013-07-24

* 1 minor enhancement:

  * Warn and default to MIT license if not set.

=== 3.6.3 / 2013-06-20

* 1 bug fix:
