@@ -28,6 +28,7 @@ For extra goodness, see: http://docs.seattlerb.org/hoe/Hoe.pdf
 * Provides 'sow' for quick project directory creation.
 * Sow uses a simple ERB templating system allowing you to capture your
   project patterns.
+* Sow can discover templates from other installed Hoe plug-ins.
 
 == SYNOPSIS:
 
@@ -198,6 +199,7 @@ Again, this must be done before the Hoe spec, or it won't be useful.
 * hoe-rubygems   - Additional RubyGems tasks.
 * hoe-seattlerb  - Minitest, email announcements, release branching.
 * hoe-telicopter - Provides tasks used by hotelicopter.
+* hoe-templates  - Provides additional templates for modern gem projects, including Travis support.
 * hoe-travis     - Allows your gem to gain maximum benefit from <http://travis-ci.org>.
 * hoe-version    - ??? submit a PR to add description
 * hoe-yard       - A Hoe plugin for generating YARD documentation.
@@ -275,6 +277,13 @@ See "Hoe Plugin Loading Sequence" in hoe.rb for full details.
 Finally, once the user's hoe-spec has been evaluated, all activated plugins
 have their `define_#{plugin}_tasks` method called. This method must be defined
 and it is here that you'll define all your tasks.
+
+==== Templates
+
+Plug-ins can now offer templates for use with `sow` by defining an **optional**
+`templates_#{plugin}` method. This method returns the directory (within the
+gem) where the templates are located. As with `~/.hoe_template`, a plug-in can
+offer multiple templates for use.
 
 == REQUIREMENTS:
 
